--- a/main.css
+++ b/main.css
@@ -1,24 +1,19 @@
 .top{
-	background-color: orange;
-	position: fixed;
-	top: 0px;
+	background-color: #EEBB44;
 	width: 100%;
-	height: 80px;
+	margin-bottom: 30px;
 }
 
-.top h2{
-	margin-top:10px; 
+.top h1{
+	margin-top:19px; 
 	margin-bottom:0px; 
 }
 
 .top p{
 	margin-top:5px; 
-	margin-bottom:5px; 
+	margin-bottom:15px;
 }
 
-body{
-margin-top: 110px;	
-}
 
 img {
 	width: -moz-available;
@@ -34,7 +29,15 @@ img {
 	font-weight: bold;
 }
 
-.box p{
+.box p, .box h3{
 	margin-left: 20px;
+	margin-right: 25px;
+}
+ .box h3{
+  height: 14px;	 
+}
+
+.box p{
+	margin-bottom: 27px;
 }
 
